# primer-challenge

./: README.md  mkdocs.yml  netlify.toml  pyproject.toml
docs/: index.md
site/: 404.html  index.html  sitemap.xml
site/drop-in-ui-checkout/: index.html
site/headless-checkout/: index.html
site/search/: search_index.json
site/universal-checkout/: index.html
site/universal-checkout/drop-in-ui-checkout/: index.html
site/universal-checkout/headless-checkout/: index.html
